--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -137,7 +137,7 @@ div.tooltip_svg_exploreVis {
   padding: 15px;
 }
 
-#mapVis { height: 400px; margin: 0px;  padding: 100px;}
+#mapVis { height: 400%; margin: 0%;  padding: 100%;}
 
 
 
