--- a/css/toastr.css
+++ b/css/toastr.css
@@ -96,7 +96,7 @@ button.toast-close-button {
 #toast-container > div {
     position: relative;
     overflow: hidden;
-    margin: auto;
+    margin: 0 0 auto;
     padding: 15px 15px 15px 50px;
     width: 300px;
     -moz-border-radius: 3px 3px 3px 3px;
